# blog

./: README.md  package-lock.json  package.json  pyproject.toml
apps/blog/: urls.py  views.py
apps/blog/form/: __init__.py  blog_form.py
apps/blog/migrations/: 0001_initial.py
apps/blog/templates/blog/: edit.html  index.html  new.html  show.html
core/: settings.py  urls.py
lib/utils/: env.py
